# personal_wallet_cli

./: .gitignore  Makefile  README.md  db_init.py  pyproject.toml  setup.cfg
personal_wallet/: localization.py  settings.py  utils.py
personal_wallet/actions/: add_operation.py  balance.py  edit_operation.py  search.py
personal_wallet/cli/: steps.py  welcome.py
personal_wallet/scripts/: wallet.py
